--- a/src/styles/core/_variables.scss
+++ b/src/styles/core/_variables.scss
@@ -4,6 +4,7 @@ $magenta-color: #FE2F67;
 $orange-color: #FF9A58;
 $purple-color: #7431D7;
 $white-color: #FFFFFF;
+$dark-color: #161825;
 
 $breakpoint-phones: 640px;
 $breakpoint-tablet: 768px;
