--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,5 +5,18 @@
 @import 'pages/login';
 
 * {
-    font-family: $font-stack;
+  font-family: $font-stack;
+}
+
+body {
+  margin: 0;
+}
+
+a {
+  color: #FFFFFF;
+  text-decoration: underline;
+
+  &:hover {
+    color: #FFFFFF;
+  }
 }
